--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Aulas 
+site_name: Aulas
 use_directory_urls: false
 
 copyright: Copyright &copy; 2023 Fernando Ferraz Ribeiro
@@ -8,15 +8,13 @@ theme:
     #- navigation.sections
     - toc.integrate
     #- navigation.tabs
-  name: material   
+  name: material
   language: en-custom
   custom_dir: docs/overrides
   favicon: figs/chart_white/icons8-doughnut-chart-96.png
   logo: figs/chart_white/icons8-doughnut-chart-96.png
 
-
   palette:
-
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -37,17 +35,12 @@ theme:
 
 site_url: "https://255ribeiro.github.io/Aulas_FFR/"
 repo_url: "https://github.com/255ribeiro/Aulas_FFR"
-repo_name: "255ribeiro/Aulas_FFR" 
+repo_name: "255ribeiro/Aulas_FFR"
 
 nav:
   - Home: index.md
-  - Elementos de Computação gráfica - cimatec 2023: ./aulas/bim_intro/index.html
+  - Elementos de Computação gráfica - cimatec 2023: ./aulas/bim_intro/capa_cimatec.md
   - Introdução a Computação gráfica - ufba 2023: ./aulas/bim_intro_ufba/index.html
-
-
-  
-  
- 
 
 markdown_extensions:
   - admonition
@@ -68,16 +61,14 @@ plugins:
       execute: True
       #execute_ignore: "./flask_dash/*/*"
       include_source: True
-      
-
 
 extra:
   social:
-      - icon: fontawesome/brands/github
-        link: https://github.com/255ribeiro
-      - icon: fontawesome/brands/youtube
-        link: https://www.youtube.com/channel/UCCkMaRdD7PBWhs4JgH5s6_w
-      - icon: fontawesome/brands/linkedin
-        link: https://www.linkedin.com/in/fernando-ferraz-ribeiro-b49a7bb0/
-      - icon: fontawesome/solid/envelope
-        link: mailto:ffribeiro@gmail.com
+    - icon: fontawesome/brands/github
+      link: https://github.com/255ribeiro
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/channel/UCCkMaRdD7PBWhs4JgH5s6_w
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/fernando-ferraz-ribeiro-b49a7bb0/
+    - icon: fontawesome/solid/envelope
+      link: mailto:ffribeiro@gmail.com
