--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,8 +39,8 @@ repo_name: "255ribeiro/Aulas_FFR"
 
 nav:
   - Home: index.md
-  - Elementos de Computação gráfica - cimatec 2023: ./aulas/bim_intro/capa_cimatec.md
-  - Introdução a Computação gráfica - ufba 2023: ./aulas/bim_intro_ufba/index.html
+  - Elementos de Computação gráfica - cimatec 2023: ./aulas/bim_intro/capas/capa_cimatec.html
+  - Introdução a Computação gráfica - ufba 2023: ./aulas/bim_intro/capas/capa_ufba.html
 
 markdown_extensions:
   - admonition
