--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,8 +11,8 @@ theme:
   name: material
   language: en-custom
   custom_dir: docs/overrides
-  favicon: figs/chart_white/icons8-doughnut-chart-96.png
-  logo: figs/chart_white/icons8-doughnut-chart-96.png
+  # favicon: figs/chart_white/icons8-doughnut-chart-96.png
+  # logo: figs/chart_white/icons8-doughnut-chart-96.png
 
   palette:
     # Palette toggle for light mode
